traefik3/2_first_proxy/app.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app
  labels:
    app: app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: registry.cn-hangzhou.aliyuncs.com/wtns/test:kubia-v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: app
              containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  ports:
    - name: app
      port: 8080
      targetPort: app
  selector:
    app: app
