traefik3/2_first_proxy/web.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web
  labels:
    app: web

spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: registry.cn-hangzhou.aliyuncs.com/wtns/test:nginx-1.20.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: web
